Footer background / horizontal scrollbar mobile fix

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,6 +5,7 @@
 body {
     background: #030309;
     font-family: "Montserrat", sans-serif;
+    overflow: hidden;
 }
 
 .Content a {
